[package]
name = "oskd"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = "0.6.17"
http = "0.2.9"
procfs = "0.16.0"
rdev = { version = "0.5.2", features = ["serialize"] }
serde_json = "1.0.96"
socketio-server = { path = "./libs/socketio-server" }
tokio = { version = "1.26.0", features = ["macros", "net", "rt-multi-thread"] }
